fix: overlay button alignment

--- a/src/mediaplayer/scss/player.scss
+++ b/src/mediaplayer/scss/player.scss
@@ -80,7 +80,6 @@ $controlsHeight: 36px;
             left: 50%;
             transform: translate(-50%);
             margin-top: -32px;
-            margin-left: -32px;
             text-align: center;
             text-decoration: none;
             display: none;
